--- a/github_test/pom.xml
+++ b/github_test/pom.xml
@@ -7,6 +7,7 @@
 	<artifactId>github_test</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>mule-application</packaging>
+    
 
 	<name>github_test</name>
 
@@ -16,56 +17,270 @@
 
 		<app.runtime>4.1.2</app.runtime>
 		<mule.maven.plugin.version>3.1.2</mule.maven.plugin.version>
+		<mule.tools.version>1.2</mule.tools.version>
+	<munit.version>1.2.0</munit.version>
+    <mule.munit.support.version>3.7.3</mule.munit.support.version>
 	</properties>
 
-	<build>
-		<plugins>
-			<plugin>
-				<groupId>org.mule.tools.maven</groupId>
-				<artifactId>mule-maven-plugin</artifactId>
-				<version>${mule.maven.plugin.version}</version>
-				<extensions>true</extensions>
-				<configuration>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
-
+	<profiles>
+		<!--prod profile-->
+		<profile>
+			<id>chdev</id>
+			<build>
+				<plugins>
+						<plugin>
+							<groupId>org.mule.tools.maven</groupId>
+							<artifactId>mule-app-maven-plugin</artifactId>
+							<version>1.2</version>
+							<extensions>true</extensions>
+							<configuration>
+								<copyToAppsDirectory>true</copyToAppsDirectory>
+							<inclusions>
+									<inclusion>
+										<groupId>org.mule.modules</groupId>
+										<artifactId>mule-module-extensions-support</artifactId>
+									</inclusion>
+								<inclusion>
+										<groupId>org.mule.modules</groupId>
+										<artifactId>mule-module-extensions-spring-support</artifactId>
+									</inclusion>
+								</inclusions>
+							</configuration>
+						</plugin>
+						<plugin>
+							<artifactId>maven-assembly-plugin</artifactId>
+							<version>2.2.1</version>
+							<configuration>
+								<descriptorRefs>
+									<descriptorRef>project</descriptorRef>
+								</descriptorRefs>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>build-helper-maven-plugin</artifactId>
+							<version>1.7</version>
+							<executions>
+								<execution>
+									<id>add-resource</id>
+									<phase>generate-resources</phase>
+									<goals>
+										<goal>add-resource</goal>
+									</goals>
+									<configuration>
+										<resources>
+											<resource>
+												<directory>src/main/app/</directory>
+											</resource>
+											<resource>
+												<directory>mappings/</directory>
+											</resource>
+										</resources>
+									</configuration>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>com.mulesoft.munit.tools</groupId>
+							<artifactId>munit-maven-plugin</artifactId>
+							<version>${munit.version}</version>
+							<executions>
+								<execution>
+									<id>test</id>
+									<phase>test</phase>
+									<goals>
+										<goal>test</goal>
+									</goals>
+								</execution>
+							</executions>
+							<configuration>
+								<coverage>
+									<runCoverage>true</runCoverage>
+									<formats>
+										<format>html</format>
+									</formats>
+								</coverage>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.apache.maven.plugins</groupId>
+							<artifactId>maven-deploy-plugin</artifactId>
+							<version>2.8.2</version>
+							<configuration>
+								<skip>true</skip>
+							</configuration>
+						</plugin>
+						<plugin>
+							<groupId>org.codehaus.mojo</groupId>
+							<artifactId>properties-maven-plugin</artifactId>
+							<version>1.0.0</version>
+							<executions>
+								<execution>
+									<id>initialize-config</id>
+									<phase>pre-clean</phase>
+										<goals>
+											<goal>read-project-properties</goal>
+										</goals>
+										<configuration>
+											<files>
+												<file>config/dev.properties</file>
+											</files>
+										</configuration>
+								</execution>
+							</executions>
+						</plugin>
+						<plugin>
+							<groupId>org.mule.tools.maven</groupId>
+							<artifactId>mule-maven-plugin</artifactId>
+							<version>2.0</version>
+							<configuration>
+								<deploymentType>cloudhub</deploymentType>
+								<muleVersion>4.1.2</muleVersion>
+								<username>devdeploy</username>
+								<password>Appdeploy@5</password>
+								
+								<environment>Dev</environment>
+								<applicationName>cloudhello-chdev</applicationName>
+								<workerType>Micro</workerType>
+							</configuration>
+							<executions>
+								<execution>
+									<id>deploy</id>
+									<phase>deploy</phase>
+									<goals>
+										<goal>deploy</goal>
+									</goals>
+								</execution>	
+							</executions>
+						</plugin>
+					</plugins>
+				<testResources>
+						<testResource>
+							<directory>src/test/munit</directory>
+						</testResource>
+					<testResource>
+							<directory>src/test/resources</directory>
+						</testResource>
+					</testResources>
+				</build>
+			</profile>
+		</profiles>
+	<!-- Mule Dependencies -->
 	<dependencies>
-        <dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-http-connector</artifactId>
-            <version>1.2.1</version>
-            <classifier>mule-plugin</classifier>
+		<!-- Xml configuration -->
+		<dependency>
+        	<groupId>com.mulesoft.muleesb</groupId>
+			<artifactId>mule-core-ee</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Xml configuration -->
+		<dependency>
+			<groupId>com.mulesoft.muleesb.modules</groupId>
+			<artifactId>mule-module-spring-config-ee</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Mule Transports -->
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-file</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-http</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+        	<groupId>com.mulesoft.muleesb.transports</groupId>
+			<artifactId>mule-transport-jdbc-ee</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+        	<groupId>com.mulesoft.muleesb.transports</groupId>
+			<artifactId>mule-transport-jms-ee</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.transports</groupId>
+			<artifactId>mule-transport-vm</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- Mule Modules -->
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-scripting</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-module-xml</artifactId>
+			<version>3.9.0</version>
+			<scope>provided</scope>
+		</dependency>
+		<!-- for testing -->
+		<dependency>
+			<groupId>org.mule.tests</groupId>
+			<artifactId>mule-tests-functional</artifactId>
+			<version>3.9.0</version>
+			<scope>test</scope>
+		</dependency>
+	<dependency>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>mule-munit-support</artifactId>
+            <version>${mule.munit.support.version}</version>
+            <scope>test</scope>
+        </dependency>
+    <dependency>
+            <groupId>com.mulesoft.munit</groupId>
+            <artifactId>munit-runner</artifactId>
+            <version>${munit.version}</version>
+            <scope>test</scope>
+        </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-extensions-support</artifactId>
+            <version>3.9.0</version>
+        </dependency>
+    <dependency>
+            <groupId>org.mule.modules</groupId>
+            <artifactId>mule-module-extensions-spring-support</artifactId>
+            <version>3.9.0</version>
         </dependency>
         <dependency>
-            <groupId>org.mule.connectors</groupId>
-            <artifactId>mule-sockets-connector</artifactId>
-            <version>1.1.1</version>
-            <classifier>mule-plugin</classifier>
+        <groupId>org.mule.tools.maven</groupId>
+        <artifactId>mule-app-maven-plugin</artifactId>
+            <version>1.2</version>
         </dependency>
-	</dependencies>
+    </dependencies>
 
 	<repositories>
           <repository>
-            <id>anypoint-exchange</id>
-            <name>Anypoint Exchange</name>
-            <url>https://maven.anypoint.mulesoft.com/api/v1/maven</url>
+            <id>Central</id>
+            <name>Central</name>
+            <url>http://repo1.maven.org/maven2/</url>
             <layout>default</layout>
         </repository>
         <repository>
             <id>mulesoft-releases</id>
             <name>MuleSoft Releases Repository</name>
-            <url>https://repository.mulesoft.org/releases/</url>
+            <url>http://repository.mulesoft.org/releases/</url>
             <layout>default</layout>
         </repository>
     </repositories>
     <pluginRepositories>
         <pluginRepository>
-            <id>mulesoft-releases</id>
+            <id>mulesoft-release</id>
             <name>mulesoft release repository</name>
             <layout>default</layout>
-            <url>https://repository.mulesoft.org/releases/</url>
+            <url>http://repository.mulesoft.org/releases/</url>
             <snapshots>
                 <enabled>false</enabled>
             </snapshots>
