--- a/sample_mule4/pom.xml
+++ b/sample_mule4/pom.xml
@@ -79,6 +79,18 @@
 		            <url>https://repository.mulesoft.org/releases/</url>
 		            <layout>default</layout>
 		        </repository>
+		        <repository>
+				<id>MuleRepository</id>
+				<name>MuleRepository</name>
+				<url>https://repository.mulesoft.org/nexus-ee/content/repositories/releases-ee/</url>
+				<layout>default</layout>
+				<releases>
+					<enabled>true</enabled>
+				</releases>
+				<snapshots>
+					<enabled>true</enabled>
+				</snapshots>
+			</repository>
    			 </repositories>
 			<distributionManagement>
 					<repository>
